# mailbridge-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mailbridge-mcp-design.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: accounts.yaml.example
docs/: mailbridge-mcp-design.md
docs/superpowers/plans/: 2026-03-24-mailbridge-mcp.md  2026-03-24-simplified-deployment.md
docs/superpowers/specs/: 2026-03-24-mailbridge-implementation-design.md  2026-03-24-simplified-deployment-design.md
docs/testing/: TEST_STATUS.json
mailbridge_mcp/: auth.py  config.py  formatters.py  imap_client.py  models.py  server.py  smtp_client.py  tools_read.py  tools_write.py
tests/: conftest.py  test_auth.py  test_config.py  test_contracts.py  test_formatters.py  test_helpers.py  test_imap_client.py  test_smtp_client.py  test_tools.py  test_tools_deep.py
