[project]
name = "mailbridge-mcp"
version = "0.1.0"
requires-python = ">=3.13"
description = "MCP server bridging Claude.ai to IMAP/SMTP email accounts"

dependencies = [
    "mcp[cli]>=1.9",
    "fastmcp>=2.0",
    "imapclient>=3.0",
    "aiosmtplib>=3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "email-validator>=2.1",
    "nh3>=0.2",
    "uvicorn[standard]>=0.29",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["imapclient", "imapclient.*", "nh3", "aiosmtplib", "aiosmtplib.*"]
ignore_missing_imports = true
